# exercism

./: .gitignore  README.md
c/: CMakeLists.txt
c/armstrong-numbers/: makefile
c/armstrong-numbers/.exercism/: metadata.json
c/armstrong-numbers/src/: armstrong_numbers.c  armstrong_numbers.h
c/darts/: makefile-mine
c/darts/.exercism/: metadata.json
c/darts/src/: darts.c  darts.h
c/hello-world/.exercism/: metadata.json
c/hello-world/src/: hello_world.c
c/isogram/.exercism/: metadata.json
c/isogram/src/: isogram.c  isogram.h
c/resistor-color/: CMakeLists.txt
c/resistor-color-duo/.exercism/: metadata.json
c/resistor-color-duo/src/: resistor_color_duo.c  resistor_color_duo.h
c/resistor-color-trio/.exercism/: metadata.json
c/resistor-color-trio/src/: resistor_color_trio.c  resistor_color_trio.h
c/resistor-color/.exercism/: metadata.json
c/resistor-color/src/: resistor_color.c  resistor_color.h
c/resistor-color/test/: test_resistor_color.c
